[gd_scene load_steps=11 format=3 uid="uid://dtmxxf3bg7c7m"]

[ext_resource type="Script" uid="uid://qmw2t32vkgyj" path="res://scripts/fusion_view.gd" id="1"]
[ext_resource type="Shader" uid="uid://dv3mgn6fcr8wu" path="res://shader/blur_bg.gdshader" id="2"]
[ext_resource type="PackedScene" uid="uid://n6tlquvaek4u" path="res://scenes/fusion_trail.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://b8tee5cidprli" path="res://scenes/card.tscn" id="4"]
[ext_resource type="Shader" uid="uid://xxn1vfn5jas6" path="res://shader/dissolve.gdshader" id="5"]
[ext_resource type="Texture2D" uid="uid://d0eswjpmr8815" path="res://shader/enchanted.png" id="6"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_m05h0"]
resource_local_to_scene = true
shader = ExtResource("2")
shader_parameter/lod = 3.0
shader_parameter/alpha = 1.0
shader_parameter/edge = 0.05
shader_parameter/darken = 0.4

[sub_resource type="FastNoiseLite" id="FastNoiseLite_06e8i"]
resource_local_to_scene = true
seed = 9
frequency = 0.0013
offset = Vector3(60, -140, 0)

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_6qlhv"]
resource_local_to_scene = true
invert = true
noise = SubResource("FastNoiseLite_06e8i")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_a3tvb"]
resource_local_to_scene = true
shader = ExtResource("5")
shader_parameter/dissolve_texture = SubResource("NoiseTexture2D_6qlhv")
shader_parameter/dissolve_value = 1.0
shader_parameter/enchant = ExtResource("6")
shader_parameter/burn_size = 0.11
shader_parameter/burn_color = Color(0.988235, 0.615686, 0.0431373, 1)
shader_parameter/burn_color2 = Color(0.858824, 0.25098, 0.0901961, 1)
shader_parameter/shiny = false
shader_parameter/freeze_progress = 0.0
shader_parameter/randomizer = 3.14
shader_parameter/enable_burn = true
shader_parameter/saturation = false
shader_parameter/enrich = 1.0
shader_parameter/rainbow = false

[node name="fusion_view" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_m05h0")
layout_mode = 0
offset_left = -130.0
offset_top = -62.0
offset_right = 2105.0
offset_bottom = 1160.0
mouse_filter = 2

[node name="Path2D" parent="." instance=ExtResource("3")]
unique_name_in_owner = true
position = Vector2(104, -104)

[node name="Path2D2" parent="." instance=ExtResource("3")]
unique_name_in_owner = true
position = Vector2(1816, 1192)
rotation = -3.14159

[node name="Card" parent="." instance=ExtResource("4")]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_a3tvb")
layout_mode = 0
offset_left = 873.0
offset_top = 422.0
offset_right = 1045.8
offset_bottom = 664.4
rotation = 0.0508307
scale = Vector2(1.1, 1.1)
mouse_filter = 2
